📝 (globals.css): Update background color in CSS to improve readability and aesthetics ✨ (Projects.tsx): Add new projects to the project list with descriptions and images ♻️ (Skill.tsx): Refactor code to use a centralized tech stack constant for frontend, backend, languages, and tools 📝 (Social.tsx): Update social links with correct URLs and icons 📝 (Work.tsx): Update work experience durations to display months in a consistent format
✨ (contants.tsx): Add tech stack constants for frontend, languages, backend, and tools with respective details
📝 (contants.tsx): Add SocialLink constants with links and logos for GitHub, LinkedIn, Email, and GitHub star functionality

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,7 +80,7 @@
     @apply border-border transition-all duration-75 ease-in-out ;
   }
   body {
-    @apply bg-[#cfc7ff] dark:bg-[#030014] text-foreground;
+    @apply bg-[#edeaff8e] dark:bg-[#030014] text-foreground;
   }
 }
 
